--- a/Sakktábla/sakk.html
+++ b/Sakktábla/sakk.html
@@ -34,19 +34,26 @@
             border-collapse: collapse;
             margin: auto;
         }
+        .feherBastya
+        {
+            background-image: url(./chess.png);
+            background-size: 300px 323px;
+            background-position: 32% 100%;
+        }
 
     </style>
 </head>
 <body>
     <!--<img src="chess.png">-->
-    
+    1188*1280
+    594*852
     <table> 
         <tr>
             <td></td><td>A</td><td>B</td><td>C</td><td>D</td><td>E</td><td>F</td><td>G</td><td>H</td>
         </tr>
         <tr>
             <td>1</td>
-            <td class="fekete"></td>
+            <td class="fekete feherBastya"></td>
             <td></td>
             <td class="fekete"></td>
             <td></td>
@@ -134,6 +141,5 @@
         </tr>
     </table>
 
-    
 </body>
 </html>
