--- a/sakk.html
+++ b/sakk.html
@@ -69,23 +69,52 @@
     </style>
 </head>
 <body>
+    <script>
+        var sorszam=0;
+        var elso;
+        function kattint(elem)
+        {
+            //console.log (elem)
+            if (sorszam==0)
+            {
+                if(elem.dataset["babu"]!="")
+                {   
+                    elso=elem;
+                    sorszam++;
+                }
+            }
+			else
+			{   
+                //lerakás
+                elem.classList.add(elso.dataset["babu"]);
+                elem.dataset["babu"]=elso.dataset["babu"];
+
+                //régi törlése
+                elso.classList.remove(elso.dataset["babu"]);
+                elso.dataset["babu"]="";
+				sorszam=0;
+			}
+
+			console.log(sorszam);
+        }
+    </script>
+
     <!--<img src="chess.png">-->
-    1188*1280
-    594*852
+
     <table> 
         <tr>
             <td></td><td>A</td><td>B</td><td>C</td><td>D</td><td>E</td><td>F</td><td>G</td><td>H</td>
         </tr>
         <tr>
             <td>1</td>
-            <td class="fekete feherBastya"></td>
-            <td class="feherLo"></td>
-            <td class="fekete feherFuto"></td>
-            <td class="feherVezer"></td>
-            <td class="fekete feherKiraly"></td>
-            <td class="feherFuto"></td>
-            <td class="fekete feherLo"></td>
-            <td class="feherBastya"></td>
+            <td class="fekete feherBastya" data-babu="feherBastya" onclick="kattint(this)"></td>
+            <td class="feherLo" data-babu="feherLo" onclick="kattint(this)"></td>
+            <td class="fekete feherFuto" data-babu="feherFuto" onclick="kattint(this)"></td>
+            <td class="feherVezer" data-babu="feherVezer" onclick="kattint(this)"></td>
+            <td class="fekete feherKiraly" data-babu="feherKiraly" onclick="kattint(this)"></td>
+            <td class="feherFuto" data-babu="feherFuto" onclick="kattint(this)"></td>
+            <td class="fekete feherLo" data-babu="feherLo" onclick="kattint(this)"></td>
+            <td class="feherBastya" data-babu="feherBastya" onclick="kattint(this)"></td>
         </tr>
         <tr>
             <td>2</td>
@@ -100,7 +129,7 @@
         </tr>
         <tr>
             <td>3</td>
-            <td class="fekete"></td>
+            <td class="fekete" data-babu="" onclick="kattint(this)"></td>
             <td></td>
             <td class="fekete"></td>
             <td></td>
