--- a/Sakktábla/sakk.html
+++ b/Sakktábla/sakk.html
@@ -29,7 +29,7 @@
 
         }
         .feherBastya, .feherFuto, .feherLo, .feherVezer, .feherKiraly, .feherGyalog,
-        .feketeBastya, .feketeFuto, .feketeLo, .feketeVezer, .feketekiKiraly, .feketeGyalog 
+        .feketeBastya, .feketeFuto, .feketeLo, .feketeVezer, .feketeKiraly, .feketeGyalog 
         {
             background-image: url(./chess.png);
             background-size: 300% 300%;
@@ -53,29 +53,68 @@
 
         .feherGyalog {background-position: 110% 103%;}
 
-        .feketeKiraly {background-position: 70% 53%;}
+        .feketeBastya {background-position: 70% -5%;}
+
+        .feketeLo {background-position: 110% -5%;}
+
+        .feketeFuto {background-position: 30% -5%;}
+
+        .feketeKiraly {background-position: 30% 53%;}
+
+        .feketeVezer {background-position: -10% 53%;}
+
+        .feketeGyalog {background-position: -10% -5%;}
 
 
     </style>
 </head>
 <body>
-    <img src="chess.png">
-    1188*1280
-    594*852
+    <script>
+        var sorszam=0;
+        var elso;
+        function kattint(elem)
+        {
+            //console.log (elem)
+            if (sorszam==0)
+            {
+                if(elem.dataset["babu"]!="")
+                {   
+                    elso=elem;
+                    sorszam++;
+                }
+            }
+			else
+			{   
+                //lerakás
+                elem.classList.add(elso.dataset["babu"]);
+                elem.dataset["babu"]=elso.dataset["babu"];
+
+                //régi törlése
+                elso.classList.remove(elso.dataset["babu"]);
+                elso.dataset["babu"]="";
+				sorszam=0;
+			}
+
+			console.log(sorszam);
+        }
+    </script>
+
+    <!--<img src="chess.png">-->
+
     <table> 
         <tr>
             <td></td><td>A</td><td>B</td><td>C</td><td>D</td><td>E</td><td>F</td><td>G</td><td>H</td>
         </tr>
         <tr>
             <td>1</td>
-            <td class="fekete feherBastya"></td>
-            <td class="feherLo"></td>
-            <td class="fekete feherFuto"></td>
-            <td class="feherVezer"></td>
-            <td class="fekete feherKiraly"></td>
-            <td class="feherFuto"></td>
-            <td class="fekete feherLo"></td>
-            <td class="feherBastya"></td>
+            <td class="fekete feherBastya" data-babu="feherBastya" onclick="kattint(this)"></td>
+            <td class="feherLo" data-babu="feherLo" onclick="kattint(this)"></td>
+            <td class="fekete feherFuto" data-babu="feherFuto" onclick="kattint(this)"></td>
+            <td class="feherVezer" data-babu="feherVezer" onclick="kattint(this)"></td>
+            <td class="fekete feherKiraly" data-babu="feherKiraly" onclick="kattint(this)"></td>
+            <td class="feherFuto" data-babu="feherFuto" onclick="kattint(this)"></td>
+            <td class="fekete feherLo" data-babu="feherLo" onclick="kattint(this)"></td>
+            <td class="feherBastya" data-babu="feherBastya" onclick="kattint(this)"></td>
         </tr>
         <tr>
             <td>2</td>
@@ -90,7 +129,7 @@
         </tr>
         <tr>
             <td>3</td>
-            <td class="fekete"></td>
+            <td class="fekete" data-babu="" onclick="kattint(this)"></td>
             <td></td>
             <td class="fekete"></td>
             <td></td>
@@ -134,25 +173,25 @@
         </tr>
         <tr>
             <td>7</td>
-            <td class="fekete"></td>
-            <td></td>
-            <td class="fekete"></td>
-            <td></td>
-            <td class="fekete"></td>
-            <td></td>
-            <td class="fekete"></td>
-            <td></td>
+            <td class="fekete feketeGyalog"></td>
+            <td class="feketeGyalog"></td>
+            <td class="fekete feketeGyalog"></td>
+            <td class="feketeGyalog"></td>
+            <td class="fekete feketeGyalog"></td>
+            <td class="feketeGyalog"></td>
+            <td class="fekete feketeGyalog"></td>
+            <td class="feketeGyalog"></td>
         </tr>
         <tr>
             <td>8</td>
-            <td></td>
-            <td class="fekete"></td>
-            <td></td>
-            <td class="fekete"></td>
+            <td class="feketeBastya"></td>
+            <td class="fekete feketeLo"></td>
+            <td class="feketeFuto"></td>
+            <td class="fekete feketeVezer"></td>
             <td class="feketeKiraly"></td>
-            <td class="fekete"></td>
-            <td></td>
-            <td class="fekete"></td>
+            <td class="fekete feketeFuto"></td>
+            <td class="feketeLo"></td>
+            <td class="fekete feketeBastya"></td>
         </tr>
     </table>
 
