--- a/sakkszerű.html
+++ b/sakkszerű.html
@@ -68,7 +68,7 @@
 
     </style>
 </head>
-<body>
+<body onload="init()">
     <script>
         var sorszam=0;
         var elso;
@@ -97,6 +97,18 @@
 
 			console.log(sorszam);
         }
+
+        function init ()
+        {
+            let cellak=document.querySelectorAll("td");
+
+            for(let i=0;i <cellak.length;i++)
+            {
+                cellak[i].addEventListener("click",function(){kattint(this);});
+            }
+
+        }
+
     </script>
 
     <!--<img src="chess.png">-->
@@ -107,29 +119,29 @@
         </tr>
         <tr>
             <td>1</td>
-            <td class="fekete feherBastya" data-babu="feherBastya" onclick="kattint(this)"></td>
-            <td class="feherLo" data-babu="feherLo" onclick="kattint(this)"></td>
-            <td class="fekete feherFuto" data-babu="feherFuto" onclick="kattint(this)"></td>
-            <td class="feherVezer" data-babu="feherVezer" onclick="kattint(this)"></td>
-            <td class="fekete feherKiraly" data-babu="feherKiraly" onclick="kattint(this)"></td>
-            <td class="feherFuto" data-babu="feherFuto" onclick="kattint(this)"></td>
-            <td class="fekete feherLo" data-babu="feherLo" onclick="kattint(this)"></td>
-            <td class="feherBastya" data-babu="feherBastya" onclick="kattint(this)"></td>
+            <td class="fekete feherBastya" data-babu="feherBastya"></td>
+            <td class="feherLo" data-babu="feherLo"></td>
+            <td class="fekete feherFuto" data-babu="feherFuto"></td>
+            <td class="feherVezer" data-babu="feherVezer"></td>
+            <td class="fekete feherKiraly" data-babu="feherKiraly"></td>
+            <td class="feherFuto" data-babu="feherFuto"></td>
+            <td class="fekete feherLo" data-babu="feherLo"></td>
+            <td class="feherBastya" data-babu="feherBastya"></td>
         </tr>
         <tr>
             <td>2</td>
-            <td class="feherGyalog"></td>
-            <td class="fekete feherGyalog"></td>
-            <td class="feherGyalog"></td>
-            <td class="fekete feherGyalog"></td>
-            <td class="feherGyalog"></td>
-            <td class="fekete feherGyalog"></td>
-            <td class="feherGyalog"></td>
-            <td class="fekete feherGyalog"></td>
+            <td class="feherGyalog" data-babu="feherGyalog"></td>
+            <td class="fekete feherGyalog" data-babu="feherGyalog"></td>
+            <td class="feherGyalog" data-babu="feherGyalog"></td>
+            <td class="fekete feherGyalog" data-babu="feherGyalog"></td>
+            <td class="feherGyalog" data-babu="feherGyalog"></td>
+            <td class="fekete feherGyalog" data-babu="feherGyalog"></td>
+            <td class="feherGyalog" data-babu="feherGyalog"></td>
+            <td class="fekete feherGyalog" data-babu="feherGyalog"></td>
         </tr>
         <tr>
             <td>3</td>
-            <td class="fekete" data-babu="" onclick="kattint(this)"></td>
+            <td class="fekete" data-babu=""></td>
             <td></td>
             <td class="fekete"></td>
             <td></td>
@@ -173,25 +185,25 @@
         </tr>
         <tr>
             <td>7</td>
-            <td class="fekete feketeGyalog"></td>
-            <td class="feketeGyalog"></td>
-            <td class="fekete feketeGyalog"></td>
-            <td class="feketeGyalog"></td>
-            <td class="fekete feketeGyalog"></td>
-            <td class="feketeGyalog"></td>
-            <td class="fekete feketeGyalog"></td>
-            <td class="feketeGyalog"></td>
+            <td class="fekete feketeGyalog" data-babu="feketeGyalog"></td>
+            <td class="feketeGyalog" data-babu="feketeGyalog"></td>
+            <td class="fekete feketeGyalog" data-babu="feketeGyalog"></td>
+            <td class="feketeGyalog" data-babu="feketeGyalog"></td>
+            <td class="fekete feketeGyalog" data-babu="feketeGyalog"></td>
+            <td class="feketeGyalog" data-babu="feketeGyalog"></td>
+            <td class="fekete feketeGyalog" data-babu="feketeGyalog"></td>
+            <td class="feketeGyalog" data-babu="feketeGyalog"></td>
         </tr>
         <tr>
             <td>8</td>
-            <td class="feketeBastya"></td>
-            <td class="fekete feketeLo"></td>
-            <td class="feketeFuto"></td>
-            <td class="fekete feketeVezer"></td>
-            <td class="feketeKiraly"></td>
-            <td class="fekete feketeFuto"></td>
-            <td class="feketeLo"></td>
-            <td class="fekete feketeBastya"></td>
+            <td class="feketeBastya" data-babu="feherBastya"></td>
+            <td class="fekete feketeLo" data-babu="feherLo"></td>
+            <td class="feketeFuto" data-babu="feketeFuto"></td>
+            <td class="fekete feketeVezer" data-babu="feketeVezer"></td>
+            <td class="feketeKiraly" data-babu="feketeKiraly"></td>
+            <td class="fekete feketeFuto" data-babu="feketeFuto"></td>
+            <td class="feketeLo" data-babu="feketeLo"></td>
+            <td class="fekete feketeBastya" data-babu="feketeBastya"></td>
         </tr>
     </table>
 
