--- a/Bíró/biro.html
+++ b/Bíró/biro.html
@@ -5,8 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bíró László</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <table>
+        <tr>
+            <td rowspan="3"></td>
+            <td></td>
+            <td rowspan="3"></td>
+        </tr>
+        <tr>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            
+        </tr>
+        <tr>
+            <td colspan="3"></td>
+        </tr>
+    </table>
 </body>
 </html>
