--- a/Bíró/Bíró.html
+++ b/Bíró/Bíró.html
@@ -10,9 +10,9 @@
 <body>
     <table>
         <tr>
-            <td rowspan="3"></td>
+            <td rowspan="3" class="oldal"><img src="toll.png"></td>
             <td></td>
-            <td rowspan="3"></td>
+            <td rowspan="3" class="oldal"><img src="toll.png"></td>
         </tr>
         <tr>
             <td></td>
