--- a/Bíró/Bíró.html
+++ b/Bíró/Bíró.html
@@ -11,18 +11,21 @@
     <table>
         <tr>
             <td rowspan="3" class="oldal"><img src="toll.png"></td>
-            <td></td>
+            <td><img src="foto.jpg" class="keret"></td>
             <td rowspan="3" class="oldal"><img src="toll.png"></td>
         </tr>
         <tr>
-            <td></td>
+            <td class="menusor"><h1><a href="./szerkezet.html">A golyóstoll szerkezete</a></h1></td>
         </tr>
         <tr>
-            <td></td>
+            <td class="menusor"><h1><a href="./golyo.html">A golyó nagyítva</a></h1></td>
             
         </tr>
         <tr>
-            <td colspan="3"></td>
+            <td colspan="3"><h2>Golyóstoll – Bíró László újságíró, feltaláló</h2>
+                <p>Golyóstoll – Bíró László újságíró, feltaláló</p>
+                Bíró László József nyughatatlan ifjúkorában szinte az összes létező szakmában kipróbálta magát. A későbbi feltaláló az orvosi egyetemen kezdett, majd foglalkozott grafológiától kezdve a festészeten át az autóversenyzésig nagyjából mindennel. 1932-től több folyóiratnak és lapnak volt munkatársa, így került a nyomdák közelébe. Ott aztán addig-addig nézegette a nyomdagépeket, míg kitalálta, hogyan lehet összeállítani a folyamatosan író tollat egy tintával töltött hengerből és egy golyóból. 1938-ban két szabadalmat is bejegyeztetett Magyarországon a folyamatosan fejlesztett toll-találmányaira, a gyártáshoz folytatott kísérleteket azonban már külföldön végezte. Párizson keresztül Argentínába vezetett az útja, és használható, ma is ismert golyóstollára is itt kapott szabadalmat 1943-ban.
+                A sok más találmánnyal is rendelkező Bíró Buenos Airesben hunyt el 1985-ben. Elismertségét bizonyítja többek között, hogy választott hazájában az ő születésnapja, szeptember 29. az Argentin Feltalálók Napja.</td>
         </tr>
     </table>
 </body>
