--- a/Sakktábla/Sakktabla.html
+++ b/Sakktábla/Sakktabla.html
@@ -44,14 +44,14 @@
         </tr>
         <tr>
             <td>2.</td>
-            <td width="100" height="100" style="background-color: grey ;"><img src="black-pawn.png" alt="white-pawn" title="gyalog" height="70%" width="90%"></td>
-            <td width="100" height="100" style="background-color:white"><img src="black-pawn.png" alt="white-pawn" title="gyalog" height="70%" width="90%"></td>
-            <td width="100" height="100" style="background-color: grey ;"><img src="black-pawn.png" alt="white-pawn" title="gyalog"height="70%" width="90%"></td>
-            <td width="100" height="100" style="background-color:white"><img src="black-pawn.png" alt="white-pawn" title="gyalog" height="70%" width="90%"></td>
-            <td width="100" height="100" style="background-color: grey ;"><img src="black-pawn.png" alt="white-pawn" title="gyalog" height="70%" width="90%"></td>
-            <td width="100" height="100" style="background-color:white"><img src="black-pawn.png" alt="white-pawn" title="gyalog"  height="70%" width="90%"></td>
-            <td width="100" height="100" style="background-color: grey ;"><img src="black-pawn.png" alt="white-pawn" title="gyalog"  height="70%" width="90%"></td>
-            <td width="100" height="100" style="background-color:white"><img src="black-pawn.png" alt="white-pawn" title="gyalog"  height="70%" width="90%"></td>
+            <td width="100" height="100" style="background-color: grey ;"><img src="black-pawn.png" alt="black-pawn" title="gyalog" height="70%" width="90%"></td>
+            <td width="100" height="100" style="background-color:white"><img src="black-pawn.png" alt="black-pawn" title="gyalog" height="70%" width="90%"></td>
+            <td width="100" height="100" style="background-color: grey ;"><img src="black-pawn.png" alt="black-pawn" title="gyalog"height="70%" width="90%"></td>
+            <td width="100" height="100" style="background-color:white"><img src="black-pawn.png" alt="black-pawn" title="gyalog" height="70%" width="90%"></td>
+            <td width="100" height="100" style="background-color: grey ;"><img src="black-pawn.png" alt="black-pawn" title="gyalog" height="70%" width="90%"></td>
+            <td width="100" height="100" style="background-color:white"><img src="black-pawn.png" alt="black-pawn" title="gyalog"  height="70%" width="90%"></td>
+            <td width="100" height="100" style="background-color: grey ;"><img src="black-pawn.png" alt="black-pawn" title="gyalog"  height="70%" width="90%"></td>
+            <td width="100" height="100" style="background-color:white"><img src="black-pawn.png" alt="black-pawn" title="gyalog"  height="70%" width="90%"></td>
         </tr>
         <tr>
             <td>3.</td>
