--- a/ECDL/munkafájlok-1/ajanlat.html
+++ b/ECDL/munkafájlok-1/ajanlat.html
@@ -31,13 +31,13 @@
                          <input type="radio" name="munka" value="festes" id="festes"><label for="festes">Festés</label><br>
                          <input type="radio" name="munka" value="mazolas" id="mazolas"><label for="mazolas">Mázolás</label><br>
                          <input type="radio" name="munka" value="tapetazas" id="tapetazas"><label for="tapetazas">Tapétázás</label><br>
-                         <input type="radio" name="munka" value="gletteles" id="gletteles">Glettelés<br>
-                         <input type="radio" name="munka" value="csiszolas" id="csiszolas">Csiszolás<br>
-                         <input type="radio" name="munka" value="egyeb" id="egyeb">Egyéb</p>
+                         <input type="radio" name="munka" value="gletteles" id="gletteles"><label for="gletteles">Glettelés</label><br>
+                         <input type="radio" name="munka" value="csiszolas" id="csiszolas"><label for="csiszolas">Csiszolás</label><br>
+                         <input type="radio" name="munka" value="egyeb" id="egyeb"><label for="egyeb">Egyéb</label></p>
                     <p>Falfelület mérete:<br>
                         <input type="text" name="meret" value="" class="meret"></p>
                     <p>Egyéb megjegyzés:<br>
-                        <textarea name="megjegyzes" rows="2" cols="10"></textarea></p>
+                        <textarea name="megjegyzes" rows="5" cols="40">Egyéb megjegyzéseit ide írja</textarea></p>
                     <p><input type="submit" name="ok" value="Ajánlat küldése"></p>    
                 </fieldset>
             </form>
