--- a/ECDL/munkafájlok-1/arak.html
+++ b/ECDL/munkafájlok-1/arak.html
@@ -19,7 +19,7 @@
     </div>
     <div id="tartalom">
         <h2>Árak</h2>
-        <p>Akció! Visszatérő ügyfeleinknek kedvezményes árat biztosítunk. Figyelmükbe ajánljuk a tapétázással kapcsolatos árainkat.</p>
+        <p>Akció! Visszatérő ügyfeleinknek kedvezményes árat biztosítunk. <a href="#tapeta">Figyelmükbe ajánljuk a tapétázással kapcsolatos árainkat.</a></p>
         <table>
             <thead>
                 <tr>
@@ -137,7 +137,7 @@
                     <td>1200 Ft/m<sup>2</sup></td>
                 </tr>
                 <tr>
-                    <td class="kiemelt" colspan="3">Tapétázás</td>
+                    <td class="kiemelt" colspan="3" id="tapeta">Tapétázás</td>
                     
                 </tr>
                 <tr>
