--- a/ECDL/munkafájlok-1/ajanlat.html
+++ b/ECDL/munkafájlok-1/ajanlat.html
@@ -37,7 +37,7 @@
                     <p>Falfelület mérete:<br>
                         <input type="text" name="meret" value="" class="meret"></p>
                     <p>Egyéb megjegyzés:<br>
-                        <textarea name="megjegyzes" rows="5" cols="40">Egyéb megjegyzéseit ide írja</textarea></p>
+                        <textarea name="megjegyzes" rows="5" cols="40">egyéb megjegyzéseit ide írja</textarea></p>
                     <p><input type="submit" name="ok" value="Ajánlat küldése"></p>    
                 </fieldset>
             </form>
