--- a/ECDL/Webszerkesztés/munkafajl_webszerkesztes/munkafájlok-15/index.html
+++ b/ECDL/Webszerkesztés/munkafajl_webszerkesztes/munkafájlok-15/index.html
@@ -9,7 +9,7 @@
     <div id="felso"></div>
     <div id="menu">
         <ul>
-            <li><a href="index.html">Bemutatkozás</a></li>
+            <li><h1><a href="index.html">Bemutatkozás</a></h1></li>
             <li><a href="termekeink.html">Termékeink</a></li>
             <li><a href="szolgaltatasaink.html">Szolgáltatásaink</a></li>
             <li><a href="akcionk.html">Akciónk</a></li>
@@ -18,10 +18,10 @@
     </div>
     <div id="kozepso">
         <div id="belso">
-            <p>Bemutatkozás</p>
+            <p><h1>Bemutatkozás</h1></p>
             <p>Cégünk fő profilja a saját nevelésű díszfáink értékesítése. Széles növényválasztékunkkal, valamint az exkluzív igényeket is kielégítő minőségi faiskolai áruinkkal, szaktanácsadással várjuk az hozzánk látogatókat. További szolgáltatásaink közé tartozik még irodai növénydekorációk kivitelezése, ápolása, kerttervezés, kertépítés.<br>
-            Díszcserjéink most kedvezményesen megvásárolhatók.</p>
-            <h5>A Kék Cédrus Faiskola igazgatója</h5>
+            <a href="akcionk.html">Díszcserjéink most kedvezményesen megvásárolhatók.</a></p>
+            <p>A<a href="elerhetosegunk.html"> Kék Cédrus Faiskola</a> igazgatója</p>
         </div>
     </div>
     <div id="also"></div>
