--- a/ECDL/Webszerkesztés/munkafajl_webszerkesztes/munkafájlok-15/szolgaltatasaink.html
+++ b/ECDL/Webszerkesztés/munkafajl_webszerkesztes/munkafájlok-15/szolgaltatasaink.html
@@ -23,11 +23,12 @@
                 <li>Díszfák, cserjék értékesítése</li>
                 <li>Növénydekorációk készítése</li>
                 <li>Kerttervezés</li>
-                <li>Kertépítés<br>
-                        - Sövénynyírás<br>
-                        - Metszés<br>
-                        - Ágaprítás<br>
-                        - Zöldhulladék elszállítás
+                <ul><li>Kertépítés<br>
+                    <li>Sövénynyírás</li>
+                    <li>Metszés</li>
+                    <li>Ágaprítás</li>
+                    <li>Zöldhulladék elszállítás</li>
+                </ul>
                 </li>
                 <li>Szaktanácsadás</li>
                 <li>Üvegházak forgalmazása</li>
