--- a/Hf március 6/zászló.html
+++ b/Hf március 6/zászló.html
@@ -5,16 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zászló</title>
-    <link rel="stylesheet" href="Style.css">
+    <link rel="stylesheet" href="./Style.css">
     
 </head>
 <body>
-    <canvas class="red"></canvas>
-    <canvas class="purple"></canvas>
-    <canvas class="violet"></canvas>
-    <canvas class="yellow"></canvas>
-    <canvas class="yellowgreen"></canvas>
-    <canvas class="lightblue"></canvas>
-    <canvas class="blue"></canvas>
+    <canvas class="red" width="1200px"></canvas><br>
+    <canvas class="orange"width="1200px"></canvas><br>
+    <canvas class="yellow" width="1200px"></canvas><br>
+    <canvas class="green" width="1200px"></canvas><br>
+    <canvas class="blue" width="1200px"></canvas><br>
+    <canvas class="purple" width="1200px"></canvas><br>
+   
 </body>
 </html>
