--- a/ECDL/munkafájlok-1/arak.html
+++ b/ECDL/munkafájlok-1/arak.html
@@ -6,18 +6,18 @@
 <title>Kovács és Fiai Kft.</title>
 </head>
 <body>
-    <div id="fejlec">
+    <header>
         <h1>Kovács &amp; Fiai Szobafestő és mázoló Kft.</h1>
-        <div id="menu">
+        <nav>
             <ul>
                 <li><a href="index.html">Főoldal</a></li>
                 <li><a href="referenciak.html">Referenciák</a></li>
                 <li><a href="arak.html">Árak</a></li>
                 <li><a href="ajanlat.html">Ajánlatkérés</a></li>
             </ul>
-        </div>
-    </div>
-    <div id="tartalom">
+        </nav>
+    </header>
+    <main>
         <h2>Árak</h2>
         <p>Akció! Visszatérő ügyfeleinknek kedvezményes árat biztosítunk. <a href="#tapeta">Figyelmükbe ajánljuk a tapétázással kapcsolatos árainkat.</a></p>
         <table>
@@ -161,9 +161,9 @@
                 </tr>
             </tbody>
         </table>
-    </div>
-    <div id="lablec">
+    </main>
+    <footer>
         <p>&copy;Minden jog fenntartva.</p>
-    </div>
+    </footer>
 </body>
 </html>
