--- a/Hf. Március 24/CSS backgrounds.html
+++ b/Hf. Március 24/CSS backgrounds.html
@@ -41,6 +41,32 @@
         color: chartreuse;
         border: 4px solid darkgreen;
     }
+    #B4
+    {
+        background-color: rgb(0, 200, 255);
+        background-repeat: no-repeat;
+        height: 100px;
+        width: 300px;
+        margin: auto;
+        font-family:Verdana, Geneva, Tahoma, sans-serif;
+        font-size: 30px;
+        text-align: center;
+        color: blue;
+        border: 4px solid darkblue;
+    }
+    #B5
+    {
+        background-color: brown;
+        background-repeat: no-repeat;
+        height: 100px;
+        width: 300px;
+        margin-right: auto;
+        font-family:Verdana, Geneva, Tahoma, sans-serif;
+        font-size: 30px;
+        text-align: center;
+        color: rgb(252, 44, 44);
+        border: 4px solid rgb(67, 13, 13);
+    }
 
 
 
@@ -52,7 +78,7 @@
     <div id="B1">Papucscsőrű</div>
     <div id="B2">Kacagójancsi</div>
     <div id="B3">A természet színe 1</div>
-    <div id="B4">Tartalom</div>
-    <div id="B5">Tartalom</div>
+    <div id="B4">A természet színe 2</div>
+    <div id="B5">A természet színe 3</div>
 </body>
 </html>
