--- a/Hf. Március 24/CSS backgrounds.html
+++ b/Hf. Március 24/CSS backgrounds.html
@@ -29,9 +29,9 @@
     }
     #B3
     {
-        background-color: green;
+        background-image: url(./letöltés.jfif);
         background-repeat: no-repeat;
-        height: 100px;
+        height: 150px;
         width: 300px;
         margin-left: auto;
         margin: 50px;
@@ -45,7 +45,7 @@
     {
         background-color: rgb(0, 200, 255);
         background-repeat: no-repeat;
-        height: 100px;
+        height: 200px;
         width: 300px;
         margin: auto;
         font-family:Verdana, Geneva, Tahoma, sans-serif;
@@ -77,7 +77,7 @@
 <body>
     <div id="B1">Papucscsőrű</div>
     <div id="B2">Kacagójancsi</div>
-    <div id="B3">A természet színe 1</div>
+    <div id="B3">Erdő</div>
     <div id="B4">A természet színe 2</div>
     <div id="B5">A természet színe 3</div>
 </body>
