--- a/Hf. Március 24/CSS backgrounds.html
+++ b/Hf. Március 24/CSS backgrounds.html
@@ -64,21 +64,16 @@
         font-family:Verdana, Geneva, Tahoma, sans-serif;
         font-size: 30px;
         text-align: center;
-        color: rgb(252, 44, 44);
+        color: rgb(31, 5, 5);
         border: 4px solid rgb(67, 13, 13);
     }
-
-
-
-
-
     </style>
 </head>
 <body>
     <div id="B1">Papucscsőrű</div>
     <div id="B2">Kacagójancsi</div>
     <div id="B3">Erdő</div>
-    <div id="B4">A természet színe 2</div>
-    <div id="B5">A természet színe 3</div>
+    <div id="B4">szín 1</div>
+    <div id="B5">szín 2</div>
 </body>
 </html>
