--- a/Grid órai/Grid 1.html
+++ b/Grid órai/Grid 1.html
@@ -9,28 +9,28 @@
 </head>
 <body>
     <div class="grid-container">
-        <div class="elem1"></div>
-        <div class="elem2"></div>
-        <div class="elem3"></div>
-        <div class="elem4"></div>
-        <div class="elem5"></div>
-        <div class="elem6"></div>
-        <div class="elem7"></div>
-        <div class="elem8"></div>
-        <div class="elem9"></div>
-        <div class="elem10"></div>
-        <div class="elem11"></div>
-        <div class="elem12"></div>
-        <div class="elem13"></div>
-        <div class="elem14"></div>
-        <div class="elem15"></div>
-        <div class="elem16"></div>
-        <div class="elem17"></div>
-        <div class="elem18"></div>
-        <div class="elem19"></div>
-        <div class="elem20"></div>
-        <div class="elem21"></div>
-        <div class="elem22"></div>
+        <div class="elem1">1</div>
+        <div class="elem2">2</div>
+        <div class="elem3">3</div>
+        <div class="elem4">4</div>
+        <div class="elem5">5</div>
+        <div class="elem6">6</div>
+        <div class="elem7">7</div>
+        <div class="elem8">8</div>
+        <div class="elem9">9</div>
+        <div class="elem10">10</div>
+        <div class="elem11">11</div>
+        <div class="elem12">12</div>
+        <div class="elem13">13</div>
+        <div class="elem14">14</div>
+        <div class="elem15">15</div>
+        <div class="elem16">16</div>
+        <div class="elem17">17</div>
+        <div class="elem18">18</div>
+        <div class="elem19">19</div>
+        <div class="elem20">20</div>
+        <div class="elem21">21</div>
+        <div class="elem22">22</div>
     </div>
 
 
