--- a/Gyakorlás 2024/05.17/Forrasok/2. html forrás/mezeiattila.html
+++ b/Gyakorlás 2024/05.17/Forrasok/2. html forrás/mezeiattila.html
@@ -19,7 +19,7 @@
 			</div>
 		</header>
 		<div class="row bg-white m-0 p-3">
-			<div class="bg-info col-sm-12 p-3 col-lg-6">
+			<div class="bg-info col-sm-12 p-3 col-lg-3">
 				<nav class="doboz sticky-top">
 					<ul class="nav flex-column p-2">
 						<li class="nav-item"><h3>Zenészek</h3></li>
@@ -53,9 +53,9 @@
 				</nav>
 
 			</div>
-			<div class="col-12 col-lg-6">
+			<div class="col-12 col-lg-9">
 				<section id="bevezeto" class="pb-3">
-					<h2><div class="font-weight-bold col-12">Egy mezei név</div></h2>
+					<h2 class="font-weight-bold col-12">Egy mezei név</h2>
 					<div class="float-right ml-3">
 						<ul class="list-group">
 							<li class="list-group-item list-group-item-info active text-center">Anyakönyvezések</li>
@@ -76,7 +76,7 @@
 				<h2 class="font-weight-bold">Zenészek</h2>
 				<section id="zeneszek" class="row">
 					<div class="col-12 col-lg-6 p-3">
-						<div class="doboz" class="p-3" id="MezeiSzabolcsAttila">
+						<div class="doboz p-3" id="MezeiSzabolcsAttila">
 							<h3 class="font-weight-bold">Mezei Szabolcs Attila</h3>
 							<div class="card m-2 p-2 col-xl-5">
 								<img class="card-img-top" src="img/MezeiSzabolcsAttila.jpg" alt="Mezei Szabolcs Attila" title="Mezei Szabolcs Attila">
